# gw2_build_randomizer

./: .gitpod.yml  randomizer.py  settings.yaml  weapons.yaml
gw2-build-randomizer/: README.md  pyproject.toml
gw2-build-randomizer/api_utils/: get_classes.py  get_skills.py  skills.toml
gw2-build-randomizer/gw2_build_randomizer/: convert.py  main.py  model.py  skills.yaml  specializations.yaml
gw2-build-randomizer/gw2_build_randomizer/resources/: professions.toml  settings.toml
gw2-build-randomizer/tests/: test_gw2_build_randomizer.py
