[project]
name = "gw2-build-randomizer"
version = "0.1.0"
description = ""
authors = [
    {name = "dangercrow", email = "dangercrow@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]

[project.scripts]
gw2-build-randomizer = "gw2_build_randomizer.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
